...
        android:layout_height="184dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="44dp"
        android:scaleType="centerCrop"
        android:src="@drawable/account_circle"/>
    <TextView
        android:id="@+id/nameProfileText"
        android:layout_width="411dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_reg"
...
        android:ellipsize="end"
        android:letterSpacing=".05"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonExitProfile"
        android:layout_width="171dp"
        android:layout_height="114dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/custom_button_exit"/>

...
